--- a/api/colorworlds/models/colorworlds.settings.json
+++ b/api/colorworlds/models/colorworlds.settings.json
@@ -1,8 +1,8 @@
 {
   "kind": "collectionType",
-  "collectionName": "paintstyles",
+  "collectionName": "colorworlds",
   "info": {
-    "name": "paintstyles"
+    "name": "colorworlds"
   },
   "options": {
     "increments": true,
@@ -12,7 +12,7 @@
     "description": {
       "type": "string"
     },
-    "picture": {
+    "image": {
       "collection": "file",
       "via": "related",
       "allowedTypes": [
@@ -23,9 +23,9 @@
       "plugin": "upload",
       "required": false
     },
-    "colorworld": {
-      "via": "paintstyles",
-      "model": "colorworlds"
+    "paintstyles": {
+      "collection": "paintstyles",
+      "via": "colorworld"
     }
   }
 }
