--- a/api/colorworlds/models/colorworlds.settings.json
+++ b/api/colorworlds/models/colorworlds.settings.json
@@ -12,7 +12,7 @@
     "description": {
       "type": "string"
     },
-    "image": {
+    "picture": {
       "collection": "file",
       "via": "related",
       "allowedTypes": [
