Added some order details

--- a/api/orders/models/orders.settings.json
+++ b/api/orders/models/orders.settings.json
@@ -23,6 +23,12 @@
     },
     "amount": {
       "type": "decimal"
+    },
+    "orderid": {
+      "type": "uid"
+    },
+    "email": {
+      "type": "string"
     }
   }
 }
